# contacts_opt

./: CMakeLists.txt  README.md  contacts_opt.kdev4  package.xml
.kdev4/: contacts_opt.kdev4
MATLAB/: contacts_opt.m  mycon_super_ellipsoid.m  plot_ifopt.m  vectarrow.m
MATLAB/superquadratics/: superquadraticsdemo.m  supertoroid.m
MATLAB/superquadratics/FEX dependencies/: NOTE_FOR_FEX.txt
MATLAB_plot/: J_manip_wall.c  J_wall.c  contacts_opt.m  plot_demo.m  plot_ifopt.m  supp_pol.m  symbolic_SE.m  symbolic_jacobian_wall.m  vectarrow.m
MATLAB_plot/data/exp_03_05/: ifopt_node__2019_05_03__11_24_37.mat
MATLAB_plot/data/exp_10_05 :)/: ifopt_node__2019_05_10__11_42_04.mat
MATLAB_plot/data/gazebo_09_05/: ifopt_node__2019_05_09__17_46_42.mat
MATLAB_plot/superquadratics/: superellipsoid.m  superquadraticsdemo.m
config/: tau_offset.yaml
include/ifopt_problem/: ForcePublisher.h  ForzaGiustaOpt.h  ifopt_contacts.h  ifopt_posture_opt.h  ifopt_test.h  posture_opt_functions.h
launch/: centauro.launch  ifopt_node.launch
problem/: contacts_opt_stack.yaml
src/: ForzaGiustaFeedForward.cpp  ifopt_contacts.cpp  ifopt_contacts_node.cpp  ifopt_posture_opt.cpp  leg_lift_node.cpp
